--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "del": "^3.0.0",
@@ -25,7 +26,7 @@
     "gulp-dest": "^0.2.3",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
-    "pum": "0.0.6",
+    "pump": "^1.0.2",
     "vinyl-source-stream": "^1.1.0"
   }
 }
